samples/_failures_safe/1761071293_b6ca6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e970e842.c: In function ‘main’:
./samples/SAFE/__tmp_e970e842.c:147:9: error: expected expression at end of input
  147 |         double det = compute_determinant(&
      |         ^~~~~~
./samples/SAFE/__tmp_e970e842.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e970e842.c:147:9: error: expected declaration or statement at end of input
